<?xml version="1.0" encoding="utf-8"?>

<!--<ScrollView-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".AddReceiptFragment">-->

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".AddReceiptScreen.AddReceiptFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/colorFocusBack"
        android:layout_gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/activity_add_receipt_title"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:textColor="@color/textCardColor"
            app:layout_constraintBottom_toTopOf="@id/receipt_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/receipt_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:strokeWidth="1dp"
            app:strokeColor="@android:color/black">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="40dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingBottom="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/sum_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:suffixText="₽"
                        android:hint="@string/input_hint_sum"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sum_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/view_store"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingBottom="40dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_store_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="40dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/store_name_input"
                            style="@style/CustomTextInputLayoutStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:hint="@string/hint_store_name"
                            app:layout_constraintEnd_toStartOf="@+id/category_input"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/store_name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textCapSentences" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/category_input"
                            style="@style/CustomTextInputLayoutStyle"
                            android:layout_width="80dp"
                            android:layout_height="0dp"
                            app:layout_constraintTop_toTopOf="@id/store_name_input"
                            app:layout_constraintBottom_toBottomOf="@id/store_name_input"
                            app:layout_constraintEnd_toEndOf="parent">

                            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                android:id="@+id/category_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textAlignment="center"
                                android:dropDownAnchor="@id/category_input"
                                android:focusable="false"/>

                        </com.google.android.material.textfield.TextInputLayout>


                    </androidx.constraintlayout.widget.ConstraintLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/date_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_hint_date"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/layout_store_input">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/date_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:focusable="false"
                            android:focusableInTouchMode="false"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

<!--</ScrollView>-->
